--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
-  "name": "ngx-sample-backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
-  },
-  "author": "akveo <contact@akveo.com>",
-  "license": "MIT",
-  "dependencies": {
-    "body-parser": "^1.17.1",
-    "express": "^4.15.2",
-    "jwt-simple": "^0.5.1",
-    "passport": "^0.3.2",
-    "passport-jwt": "^2.2.1"
-  }
+    "name": "ngx-sample-backend",
+    "version": "1.0.0",
+    "description": "",
+    "main": "app.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "prestart": "npm install",
+        "start": "node index.js"
+    },
+    "author": "akveo <contact@akveo.com>",
+    "license": "MIT",
+    "dependencies": {
+        "body-parser": "^1.18.2",
+        "connect": "^3.2.0",
+        "express": "^4.16.2",
+        "js-yaml": "^3.3.0",
+        "jwt-simple": "^0.5.1",
+        "passport": "^0.3.2",
+        "passport-jwt": "^2.2.1",
+        "password": "^0.1.1",
+        "swagger-tools": "0.10.1"
+    }
 }
