--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
     "license": "MIT",
     "dependencies": {
         "body-parser": "^1.18.2",
+        "chalk": "^2.3.0",
+        "config-lite": "^2.1.0",
         "connect": "^3.2.0",
         "express": "^4.16.2",
         "js-yaml": "^3.3.0",
         "jwt-simple": "^0.5.1",
+        "mocha": "^4.1.0",
+        "mongoose": "^4.13.9",
         "passport": "^0.3.2",
         "passport-jwt": "^2.2.1",
         "password": "^0.1.1",
-        "swagger-tools": "0.10.1"
+        "swagger-tools": "0.10.1",
+        "winston": "^3.0.0-rc1"
     }
 }
